--- a/manifest.json
+++ b/manifest.json
@@ -9,8 +9,22 @@
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
+  
+  "background": {
+    "scripts": ["background.js"]
+  },
+
+  "content_scripts": [
+    { 
+      "matches": ["http://*/*"], 
+      "js":      ["content.js"]
+    }
+  ],
+
   "permissions": [
     "activeTab",
-    "https://ajax.googleapis.com/"
+    "https://ajax.googleapis.com/",
+    "http://*/*",
+    "https://*/*"
   ]
 }
