--- a/manifest.json
+++ b/manifest.json
@@ -9,14 +9,14 @@
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
-  
+
   "background": {
     "scripts": ["background.js"]
   },
 
   "content_scripts": [
-    { 
-      "matches": ["http://*/*"], 
+    {
+      "matches": ["http://*/*", "https://*/*"],
       "js":      ["content.js"]
     }
   ],
